[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
k8s-namespace.shell = "kubectl create namespace dagster-cloud"
k8s-secret-agent.shell = "kubectl create secret generic dagster-cloud-agent-token --from-literal=DAGSTER_CLOUD_AGENT_TOKEN=${DAGSTER_CLOUD_AGENT_TOKEN} --namespace dagster-cloud"
helm-install.shell = "bash .helm/helm-install.sh"
wi-federation-gh.shell = "bash ./.google/wi-federation-gh.sh"
