[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
dependencies = [
    "dagster-cloud-cli>=0.15.0",
]
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=4.0.1",
    "black>=22.3.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
k8s-init.shell = "bash ./.google/k8s-init.sh"
helm-install.shell = "bash .helm/helm-install.sh"
wi-federation-gh.shell = "bash ./.google/wi-federation-gh.sh"
tf-export.shell = "gcloud beta resource-config bulk-export --path=./.google/terraform --project=${GCP_PROJECT_ID} --resource-format=terraform"
dagster-deployment.shell = "bash ./.dagster/dagster-deployment.sh"
